# Motion-Artefact-Index

./: CMakeLists.txt  Ted_Motion_Library.cpp  Ted_Motion_Library.hpp  main.cxx
js/mai_clusterpost/: README.md  conf.json  package.json  submitmai.js
js/mai_import/: README.md  index.js  mai.handlers.js  mai.routes.js  package.json  test.js
src/: main.cxx
